<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_baseline_home_24"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_baseline_assignment_24"
            android:title="@string/menu_gallery" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_baseline_groups_24"
            android:title="@string/menu_slideshow" />
        <item
            android:id="@+id/nav_projects"
            android:icon="@drawable/ic_baseline_rocket_launch_24"
            android:title="@string/menu_projects" />
        <item
            android:id="@+id/nav_schedule"
            android:icon="@drawable/ic_baseline_schedule_24"
            android:title="@string/menu_schedule" />
        <item
            android:id="@+id/nav_vneuch"
            android:icon="@drawable/ic_baseline_auto_awesome_24"
            android:title="@string/menu_vneuch" />
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_baseline_business_24"
            android:title="@string/menu_about" />
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_baseline_person_24"
            android:title="@string/menu_profile" />


    </group>
</menu>